# libmaccas-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pr.yml  publish.yml
src/: api.rs  error.rs  lib.rs  sensor.data  types.rs
src/types/: request.rs  response.rs
