[package]
name = "libmaccas"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
uuid = { version = "0.8.2", features = ["v4"] }
http-auth-basic = "0.3.3"
http = "0.2.6"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
chrono = "0.4.19"
rand = "0.8.5"
ts-rs = "6.1"
