[package]
name = "libmaccas"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "McDonald's API Client"
repository = "https://github.com/Accurate0/libmaccas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
uuid = { version = "0.8.2", features = ["v4"] }
http = "0.2.6"
reqwest-middleware = "0.1.5"
rand = "0.8.5"
