[package]
name = "libmaccas"
version = "0.41.0"
edition = "2021"
license = "MIT"
description = "McDonald's API Client"
repository = "https://github.com/Accurate0/libmaccas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
uuid = { version = "1.1.2", features = ["v4"] }
http = "0.2.6"
reqwest-middleware = "0.2.0"
tracing = "0.1.35"
anyhow = "1.0.58"
